# firefly

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  cmake_clear.py  firefly.podspec  fireflyConfig.cmake.in  fireflylib.podspec  install_manifest.txt  main.cpp  rebuild.py
Utility/: File.cpp  File.hpp  FileUtility.cpp  RingBuffer.hpp  Thread.cpp  ThreadManager.cpp  TimerManager.cpp  TimerPool.cpp  TimerPool.hpp  Utility.cpp
core/: CMakeLists.txt  Type.hpp
core/network/: CMakeLists.txt  Connector.cpp  Connector.hpp  ConnectorManager.cpp  ConnectorManager.hpp  ConnectorType.hpp  DnsParserManager.cpp  DnsParserManager.hpp  HttpRequest.cpp  HttpRequest.hpp  IConnector.hpp  IConnectorManager.hpp  ILink.hpp  IPAddress.cpp  IPAddress.hpp  Link.cpp  Link.hpp  NetEngine.cpp  NetEngine.hpp  NetUtility.cpp  NetUtility.hpp  NetworkConfig.hpp  NetworkType.cpp  NetworkType.hpp  TcpLink.cpp  TcpLink.hpp  UdpLink.cpp  UdpLink.hpp
core/utility/: Buffer.hpp  CMakeLists.txt  File.cpp  File.hpp  FileUtility.cpp  FileUtility.hpp  Log.cpp  Log.hpp  MemoryPool.hpp  NoCopyable.hpp  Packet.hpp  PacketPool.hpp  Thread.cpp  Thread.hpp  ThreadManager.cpp  ThreadManager.hpp  Time.cpp  Time.hpp  Timer.cpp  Timer.hpp  TimerManager.cpp  TimerManager.h  TimerPool.cpp  TimerPool.hpp  Utility.cpp  Utility.hpp
firefly/Utility/headers/: File.hpp  FileUtility.hpp  NonCopyable.hpp  Reflection.hpp  RingBuffer.hpp  Thread.hpp  ThreadManager.hpp  TimerManager.hpp
firefly/Utility/src/: Log.cpp  Reflection.cpp  Thread.cpp  ThreadManager.cpp  Timer.cpp
firefly/test/: testThread.hpp  testTimer.cpp  testTimer.hpp
framework/iOS/firefly.framework/: Info.plist  firefly
framework/iOS/firefly.framework/Headers/: File.hpp  RingBuffer.hpp
framework/iOS/firefly.framework/_CodeSignature/: CodeDirectory  CodeRequirements  CodeRequirements-1  CodeResources  CodeSignature
framework/iOS/firefly.xcframework/: Info.plist
framework/iOS/firefly.xcframework/ios-arm64/firefly.framework/: Info.plist  firefly
framework/iOS/firefly.xcframework/ios-arm64/firefly.framework/Headers/: File.hpp
framework/iOS/firefly.xcframework/ios-arm64/firefly.framework/_CodeSignature/: CodeDirectory  CodeRequirements-1  CodeResources  CodeSignature
framework/iOS/firefly.xcframework/ios-arm64_x86_64-maccatalyst/firefly.framework/: firefly
framework/iOS/firefly.xcframework/ios-arm64_x86_64-maccatalyst/firefly.framework/Versions/A/Headers/: Time.hpp
framework/iOS/firefly.xcframework/ios-arm64_x86_64-maccatalyst/firefly.framework/Versions/A/Resources/: Info.plist
framework/iOS/firefly.xcframework/ios-arm64_x86_64-maccatalyst/firefly.framework/Versions/A/_CodeSignature/: CodeDirectory  CodeRequirements-1  CodeResources  CodeSignature
framework/iOS/firefly.xcframework/ios-x86_64-simulator/firefly.framework/: Info.plist  firefly
framework/iOS/firefly.xcframework/ios-x86_64-simulator/firefly.framework/Headers/: RingBuffer.hpp
framework/iOS/firefly.xcframework/ios-x86_64-simulator/firefly.framework/_CodeSignature/: CodeDirectory  CodeRequirements-1  CodeResources
scripts/: conflate.py  rebuild.py
test/: CMakeLists.txt  test.cpp  test.hpp  testFile.cpp  testFile.hpp  testPacketPool.cpp  testPacketPool.h  testThread.cpp  testThread.hpp  testTimer.cpp  testTimer.hpp
